2007-03-31  Mitz Pettel  <mitz@webkit.org>

Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13209
          REGRESSION (r18756-18765): Incomplete list marker repaint when resizing list item

        Test: fast/repaint/list-marker-2.html

        A list marker can increase the horizontal overflow after layoutInlineChildren(),
        so made that function return only the vertical bounds of the repaint rect. As the
        horizontal bounds, made layoutBlock() just use the overflow bounds after layout.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):
        * rendering/RenderBlock.h:
        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren):



Canonical link: https://commits.webkit.org/17315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20636 268f45cc-cd09-0410-ab3c-d52691b4dbfc