WebCore/rendering/RenderBlock.h
@@ -110,7 +110,7 @@ public:
     virtual void layout();
     virtual void layoutBlock(bool relayoutChildren);
     void layoutBlockChildren(bool relayoutChildren);
-    IntRect layoutInlineChildren(bool relayoutChildren);
+    void layoutInlineChildren(bool relayoutChildren, int& repaintTop, int& repaintBottom);
 
     void layoutPositionedObjects(bool relayoutChildren);
     void insertPositionedObject(RenderObject*);
